--- a/app/src/main/res/layout/activity_about_page.xml
+++ b/app/src/main/res/layout/activity_about_page.xml
@@ -13,7 +13,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center">
 
             <TextView
                 android:id="@+id/projectName"
@@ -128,7 +129,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
 
-                tools:srcCompat="@drawable/elgin"
+                app:srcCompat="@drawable/elgin"
                 />
 
             <TextView
@@ -136,7 +137,7 @@
                 android:layout_width="344dp"
                 android:layout_height="78dp"
                 android:layout_marginTop="16dp"
-                android:text=" about the app Lorem ipsum d u. Ut enim ad minim veniam, quis nostrud exercitation ullamco oluptate velit esse cillum d sunt in culpa qui officia deserunt mollit anim id est laborum."
+                android:text="A Senior ECE student at UT, Elgin is an avid coder who likes rugby, running, and nature."
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
